Airflow_Installation/logs/dag_id=job_data_pipeline/run_id=manual__2023-07-29T203434.581451+0000/task_id=write_to_postgres/attempt=2.log
[2023-07-29T20:40:32.925+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: job_data_pipeline.write_to_postgres manual__2023-07-29T20:34:34.581451+00:00 [queued]>
[2023-07-29T20:40:33.000+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: job_data_pipeline.write_to_postgres manual__2023-07-29T20:34:34.581451+00:00 [queued]>
[2023-07-29T20:40:33.027+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T20:40:33.150+0000] {taskinstance.py:1284} INFO - Starting attempt 2 of 2
[2023-07-29T20:40:33.163+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T20:40:33.404+0000] {taskinstance.py:1304} INFO - Executing <Task(PythonOperator): write_to_postgres> on 2023-07-29 20:34:34.581451+00:00
[2023-07-29T20:40:33.438+0000] {standard_task_runner.py:55} INFO - Started process 26724 to run task
[2023-07-29T20:40:33.472+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'job_data_pipeline', 'write_to_postgres', 'manual__2023-07-29T20:34:34.581451+00:00', '--job-id', '3037', '--raw', '--subdir', 'DAGS_FOLDER/load_data_v4.py', '--cfg-path', '/tmp/tmpxso3et3s']
[2023-07-29T20:40:33.504+0000] {standard_task_runner.py:83} INFO - Job 3037: Subtask write_to_postgres
[2023-07-29T20:40:34.291+0000] {task_command.py:389} INFO - Running <TaskInstance: job_data_pipeline.write_to_postgres manual__2023-07-29T20:34:34.581451+00:00 [running]> on host f1ea17bde741
[2023-07-29T20:40:35.419+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=job_data_pipeline
AIRFLOW_CTX_TASK_ID=write_to_postgres
AIRFLOW_CTX_EXECUTION_DATE=2023-07-29T20:34:34.581451+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-07-29T20:34:34.581451+00:00
[2023-07-29T20:40:35.547+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T20:40:36.074+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/load_data_v4.py", line 90, in write_to_postgres
    [tuple(x) for x in df.values]
  File "/home/airflow/.local/lib/python3.7/site-packages/psycopg2/extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: syntax error at or near "Title"
LINE 1: ...ription,category,label,tag,location,longitude,Job Title,id,s...
                                                             ^

[2023-07-29T20:40:36.148+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=job_data_pipeline, task_id=write_to_postgres, execution_date=20230729T203434, start_date=20230729T204032, end_date=20230729T204036
[2023-07-29T20:40:36.817+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 3037 for task write_to_postgres (syntax error at or near "Title"
LINE 1: ...ription,category,label,tag,location,longitude,Job Title,id,s...
                                                             ^
; 26724)
[2023-07-29T20:40:36.881+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-07-29T20:40:37.068+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
